--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body style="margin:0; display: flex; justify-content: center; background: #000; min-height: 100vh;">
-<script type="text/javascript" src="assets/bundle.js"></script>
+<script type="text/javascript" src="build/bundle.js"></script>
 </body>
 </html>
